[package]
name = "faucetly"
version = "0.1.0"
authors = ["Sabir Khan <simplysabir@email.com>"]
license = "MIT OR Apache-2.0"
description = "automate daily solana faucet"
readme = "README.md"
homepage = "https://github.com/simplysabir/faucetly"
repository = "https://github.com/simplysabir/faucetly"
keywords = ["cli", "faucet", "solana"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }